--- a/css/main.css
+++ b/css/main.css
@@ -83,10 +83,16 @@ textarea {
   resize: vertical;
 }
 
+
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
+   .content-wrapper {
+     width: 90%;
+     margin: 50px 0;
+   }
    /*-------------- Base Header - Footer styles --------------*/
 
    header,
@@ -97,10 +103,8 @@ textarea {
       flex-flow: row wrap;
    }
 
-   /* Header Styles */
-
    header {
-
+     padding: 15px 0;
    }
 
    header .content-wrapper {
@@ -108,54 +112,76 @@ textarea {
       justify-content: center;
       align-items: center;
       flex-flow: row wrap;
-
-   }
-
-   header figure {
-
+      margin: 0;
    }
 
    .header-divider {
-
+     width: 100%;
+     height: 1px;
+     margin: 10px 0 20px 0;
    }
 
    header nav {
       display:flex;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
       flex-flow: row wrap;
-
+      width: 60%;
    }
+
+   header nav ul {
+     display: flex;
+     justify-content: space-around;
+     list-style: none;
+     width: 100%;
+   }
+
+   footer {
+     flex-direction: column;
+   }
+
+   footer p {
+     margin: 0;
+  }
+
+  footer .content-wrapper {
+    width: 55%;
+    margin: 50px 0;
+  }
+
+   footer .social-icons {
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+   }
+
+   footer .social-icons  p {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+   }
+
+   footer .copyright {
+     margin: 20px 0;
+   }
+
+  footer .contact {
+    margin-bottom: 50px;
+  }
 
    /*-------------- Mobile Styles - Homepage --------------*/
 
-  /* Main */
+  /* Hero Area */
 
    .hero-area {
+     display: flex;
+     justify-content: center;
+     flex-flow: row wrap;
 
    }
 
-   .hero-image {
-
-  }
-
-   main .content-wrapper {
-
-   }
-
-   .form-description {
-
-   }
-
-   .form {
-
-   }
-    
-   main h1 {
-     
-   }
-
-   main h2{
+   main h2 {
+     margin: 50px 20px;
 
    }
 
@@ -166,6 +192,7 @@ textarea {
    main p {
      
   }
+  /* Aside */
 
    aside {
       display:flex;
@@ -175,41 +202,53 @@ textarea {
 
    }
 
+  /* Features */
+
    .features {
       display:flex;
       justify-content: center;
-      align-items: center;
       flex-flow: row wrap;
    }
 
-   .features-items {
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      flex-flow: row wrap;
+   .features h2 {
+     margin-bottom: 60px;
    }
 
-    .features-item-description {
-    
-  }
-
-    .fontawesome-icon p {
-
+   .features .features-items {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
    }
 
-   .features-item-description p {
-
+   .features article {
+    width: 63%;
+    margin: 30px 0;
    }
+
+   .features p {
+     margin: 0;
+   }
+
+   /* Reviews */
 
    .reviews {
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      flex-flow: row wrap;
+    display:flex;
+    justify-content: center;
+    flex-flow: row wrap;
    }
 
-   /* about page */
-    /*about page - main */
+   .reviews h2 {
+     margin-bottom: 40px;
+   }
+
+   .reviews h3 {
+     width: 55%;
+     margin: 20px 0;
+
+   }
+
+   /* ------ Mobile styles - About page -------- */
 
   .mission {
       display:flex;
@@ -259,68 +298,40 @@ textarea {
 
   }
 
-  .contact-content p{
+  .contact-content p {
+    margin: 0;
 
   }
 
-  /* FAQ page */
+  /* ------ Mobile Styles - FAQ page -------- */
 
   .faq {
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      flex-flow: row wrap;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+  .faq .content-wrapper {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
   }
 
   .faq-content {
+    margin-bottom: 50px;
     
   }
 
-  .faq-content h4 {
+  .faq h2 {
+    margin-bottom: 40px;
 
   }
 
-  .faq-content p{
+  .faq-content p {
 
   }
-
-
-
-   /* Footer */
-
-   footer {
-
-   }
-
-   .footer-content {
-
-   }
-
-   .contact {
-
-   }
-
-   footer h4 {
-
-   }
-
-   footer p {
-
-   }
-
-   .social {
-
-   }
-
-   .social-icons {
-
-   }
-
-   /* Copyright */
-
-   .copyright {
-
-   }
 
 
 
